--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img class="sprite" id="star" src="images/star.png">
     <img class="sprite" id="asteroid" src="images/asteroid.png">
     <img class="sprite" id="ship" src="images/ship.png">
+    <audio src="sounds/fire.wav" id="fireSounds" class="hidden"></audio>
 <canvas id="canvas"></canvas>
 <script src="js/canvas.js"></script>
 </body>
