--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img class="sprite" id="asteroid" src="images/asteroid.png">
     <img class="sprite" id="ship" src="images/ship.png">
     <img class="sprite" id='peon' src='images/peon.png'>
+    <img class="sprite" id='peonDmg' src='images/peon-dmg.png'>
     <audio src="sounds/fire.wav" id="fireSounds" class="hidden"></audio>
 <canvas id="canvas"></canvas>
 <script src="js/canvas.js"></script>
